@@ -429,7 +429,7 @@ array(
         'cc_cvv' => 'column=cc_cvv;type=blob',
         'last_modified' => 'column=last_modified;type=datetime',
         'orderDate' => 'column=date_purchased;type=datetime',
-        'orders_status' => 'column=orders_status;type=integer',
+        'status' => 'column=orders_status;type=integer',
         'orders_date_finished' => 'column=orders_date_finished;type=datetime',
         'currency' => 'column=currency;type=string',
         'currency_value' => 'column=currency_value;type=integer',
@@ -468,5 +468,31 @@ array(
         'dateCreated' => 'column=date_created;type=datetime',
         'ipAddr' => 'column=ipaddr;type=string',
         'released' => 'column=release_flag;type=string',
+    ),
+    'orders_products' => array(
+        'id' => 'column=orders_products_id;type=integer;key=true;auto=true',
+        'orderId' => 'column=orders_id;type=integer',
+        'orderProductId' => 'column=products_id;type=integer',
+        'model' => 'column=products_model;type=string',
+        'name' => 'column=products_name;type=string',
+        'productPrice' => 'column=products_price;type=integer',
+        'finalPrice' => 'column=final_price;type=integer',
+        'tax' => 'column=products_tax;type=integer',
+        'quantity' => 'column=products_quantity;type=float',
+        'onetimeCharges' => 'column=onetime_charges;type=integer',
+        'pricedByAttribute' => 'column=products_priced_by_attribute;type=integer',
+        'free' => 'column=product_is_free;type=integer',
+        'discountType' => 'column=products_discount_type;type=integer',
+        'discountTypeFrom' => 'column=products_discount_type_from;type=integer',
+        'productId' => 'column=products_prid;type=string',
+    ),
+    'orders_products_download' => array(
+        'id' => 'column=orders_products_download_id;type=integer;key=true;auto=true',
+        'orderId' => 'column=orders_id;type=integer',
+        'orderProductId' => 'column=orders_products_id;type=integer',
+        'filename' => 'column=orders_products_filename;type=string',
+        'maxDays' => 'column=download_maxdays;type=integer',
+        'downloadCount' => 'column=download_count;type=integer',
+        'productId' => 'column=products_prid;type=string',
     ),
 );
