@@ -56,6 +56,8 @@ Release 0.9.2
 - add qv_queue email templates (and supporting code)
 - add new patch to make coupon_admin mails usable
 - add new coupon email templates
+- add setting 'downloadOrderStatusList'
+- add ZMDownload
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
